Entrega4/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID LFTBRAC auxprogram main RGTBRAC
Rule 2     auxprogram -> vars auxprogram
Rule 3     auxprogram -> function auxprogram
Rule 4     auxprogram -> <empty>
Rule 5     array -> ID LFTBRACSQR exp RGTBRACSQR
Rule 6     arrayvals -> LFTBRACSQR arrayvalsaux RGTBRACSQR
Rule 7     arrayvalsaux -> constant
Rule 8     arrayvalsaux -> constant COMMA arrayvalsaux
Rule 9     assignment -> assignmentaux EQUAL expression SEMICOLON
Rule 10    assignmentaux -> ID
Rule 11    assignmentaux -> array
Rule 12    blockreturn -> LFTBRAC blockneutral RGTBRAC
Rule 13    blockreturn -> LFTBRAC blockneutral RETURN exp SEMICOLON RGTBRAC
Rule 14    blockneutral -> statement blockneutral
Rule 15    blockneutral -> vars blockneutral
Rule 16    blockneutral -> empty
Rule 17    block -> LFTBRAC blockneutral RGTBRAC
Rule 18    condition -> IF conditionaux
Rule 19    condition -> IF conditionaux ELSE block
Rule 20    conditionaux -> LFTPAREN expression RGTPAREN block conditionaux2
Rule 21    conditionaux2 -> ELSEIF conditionaux
Rule 22    conditionaux2 -> empty
Rule 23    constant -> ID
Rule 24    constant -> array
Rule 25    constant -> cteN
Rule 26    constant -> cteS
Rule 27    constant -> TRUE
Rule 28    constant -> FALSE
Rule 29    constant -> call2
Rule 30    cteN -> FLOAT codeAddConst
Rule 31    cteN -> INT codeAddConst
Rule 32    cteS -> STRING
Rule 33    exp -> term
Rule 34    exp -> term PLUS codeAddOperator exp
Rule 35    exp -> term MINUS codeAddOperator exp
Rule 36    factoraux -> constant
Rule 37    factoraux -> PLUS constant
Rule 38    factoraux -> MINUS constant
Rule 39    factor -> LFTPAREN codeAddOpenParen expression RGTPAREN codeDeleteOpenParen codeAskFactor
Rule 40    factor -> factoraux codeAskFactor
Rule 41    expression -> exp
Rule 42    expression -> exp expressionaux codeAddOperator exp codeAskExpression
Rule 43    expressionaux -> AND
Rule 44    expressionaux -> DOUBEQUAL
Rule 45    expressionaux -> NOT
Rule 46    expressionaux -> OR
Rule 47    expressionaux -> LESSTHANEQUAL
Rule 48    expressionaux -> GREATTHANEQUAL
Rule 49    expressionaux -> GREATTHAN
Rule 50    expressionaux -> LESSTHAN
Rule 51    loop -> WHILE codeWhileCondition LFTPAREN expression RGTPAREN codeGOTOF block codeGOTO
Rule 52    write -> PRINT LFTPAREN constant RGTPAREN SEMICOLON
Rule 53    parameter -> type codeCheckType ID codeAddParameters
Rule 54    parameter -> type codeCheckType ID codeAddParameters COMMA parameter
Rule 55    parameter -> empty
Rule 56    term -> factor MULTIPLICATION codeAddOperator term
Rule 57    term -> factor DIVISION codeAddOperator term
Rule 58    term -> factor codeAskTerm
Rule 59    statement -> assignment
Rule 60    statement -> condition
Rule 61    statement -> loop
Rule 62    statement -> write
Rule 63    statement -> read
Rule 64    statement -> call
Rule 65    type -> INT
Rule 66    type -> FLOAT
Rule 67    type -> CHAR
Rule 68    type -> BOOL
Rule 69    type -> STRING
Rule 70    main -> PRIOMH codeScope block
Rule 71    function -> FUNCTION codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope
Rule 72    functionaux -> VOID codeTypeVoid codeCheckType
Rule 73    functionaux -> codeFuncIndicator type codeCheckType
Rule 74    vars -> type codeCheckType varsaux
Rule 75    varsaux -> ID codeAddVar EQUAL expression SEMICOLON
Rule 76    varsaux -> ID codeAddVar EQUAL expression COMMA varsaux
Rule 77    varsaux -> ID codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvals SEMICOLON
Rule 78    varsaux -> ID codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvals COMMA varsaux
Rule 79    call -> ID LFTPAREN exp callaux RGTPAREN SEMICOLON
Rule 80    callaux -> COMMA exp callaux
Rule 81    callaux -> empty
Rule 82    call2 -> ID LFTPAREN exp callaux RGTPAREN
Rule 83    read -> READ LFTPAREN readaux RGTPAREN SEMICOLON
Rule 84    readaux -> ID
Rule 85    readaux -> array
Rule 86    empty -> <empty>
Rule 87    codeGOTO -> <empty>
Rule 88    codeGOTOF -> <empty>
Rule 89    codeWhileCondition -> <empty>
Rule 90    codeScope -> <empty>
Rule 91    codeCheckType -> <empty>
Rule 92    codeAddVar -> <empty>
Rule 93    codeAddVarArreglo -> <empty>
Rule 94    codeAddParameters -> <empty>
Rule 95    codeNameOfFunct -> <empty>
Rule 96    codeTypeVoid -> <empty>
Rule 97    codeFuncIndicator -> <empty>
Rule 98    codeDeleteOpenParen -> empty
Rule 99    codeAddOpenParen -> empty
Rule 100   codeAddConst -> empty
Rule 101   codeAddOperator -> empty
Rule 102   codeAskTerm -> empty
Rule 103   codeAskFactor -> empty
Rule 104   codeAskExpression -> empty

Terminals, with rules where they appear

AND                  : 43
BOOL                 : 68
CHAR                 : 67
COMMA                : 8 54 76 78 80
DIVISION             : 57
DOUBEQUAL            : 44
ELSE                 : 19
ELSEIF               : 21
EQUAL                : 9 75 76 77 78
FALSE                : 28
FLOAT                : 30 66
FUNCTION             : 71
GREATTHAN            : 49
GREATTHANEQUAL       : 48
ID                   : 1 5 10 23 53 54 71 75 76 77 78 79 82 84
IF                   : 18 19
INT                  : 31 65 77 78
LESSTHAN             : 50
LESSTHANEQUAL        : 47
LFTBRAC              : 1 12 13 17
LFTBRACSQR           : 5 6 77 78
LFTPAREN             : 20 39 51 52 71 79 82 83
MINUS                : 35 38
MULTIPLICATION       : 56
NOT                  : 45
OR                   : 46
PLUS                 : 34 37
PRINT                : 52
PRIOMH               : 70
PROGRAM              : 1
READ                 : 83
RETURN               : 13
RGTBRAC              : 1 12 13 17
RGTBRACSQR           : 5 6 77 78
RGTPAREN             : 20 39 51 52 71 79 82 83
SEMICOLON            : 9 13 52 75 77 79 83
STRING               : 32 69
TRUE                 : 27
VOID                 : 72
WHILE                : 51
error                : 

Nonterminals, with rules where they appear

array                : 11 24 85
arrayvals            : 77 78
arrayvalsaux         : 6 8
assignment           : 59
assignmentaux        : 9
auxprogram           : 1 2 3
block                : 19 20 51 70
blockneutral         : 12 13 14 15 17
blockreturn          : 71
call                 : 64
call2                : 29
callaux              : 79 80 82
codeAddConst         : 30 31
codeAddOpenParen     : 39
codeAddOperator      : 34 35 42 56 57
codeAddParameters    : 53 54
codeAddVar           : 75 76
codeAddVarArreglo    : 77 78
codeAskExpression    : 42
codeAskFactor        : 39 40
codeAskTerm          : 58
codeCheckType        : 53 54 72 73 74
codeDeleteOpenParen  : 39
codeFuncIndicator    : 73
codeGOTO             : 51
codeGOTOF            : 51
codeNameOfFunct      : 71
codeScope            : 70 71 71
codeTypeVoid         : 72
codeWhileCondition   : 51
condition            : 60
conditionaux         : 18 19 21
conditionaux2        : 20
constant             : 7 8 36 37 38 52
cteN                 : 25
cteS                 : 26
empty                : 16 22 55 81 98 99 100 101 102 103 104
exp                  : 5 13 34 35 41 42 42 79 80 82
expression           : 9 20 39 51 75 76
expressionaux        : 42
factor               : 56 57 58
factoraux            : 40
function             : 3
functionaux          : 71
loop                 : 61
main                 : 1
parameter            : 54 71
program              : 0
read                 : 63
readaux              : 83
statement            : 14
term                 : 33 34 35 56 57
type                 : 53 54 73 74
vars                 : 2 15
varsaux              : 74 76 78
write                : 62

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID LFTBRAC auxprogram main RGTBRAC

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID LFTBRAC auxprogram main RGTBRAC

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . LFTBRAC auxprogram main RGTBRAC

    LFTBRAC         shift and go to state 4


state 4

    (1) program -> PROGRAM ID LFTBRAC . auxprogram main RGTBRAC
    (2) auxprogram -> . vars auxprogram
    (3) auxprogram -> . function auxprogram
    (4) auxprogram -> .
    (74) vars -> . type codeCheckType varsaux
    (71) function -> . FUNCTION codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope
    (65) type -> . INT
    (66) type -> . FLOAT
    (67) type -> . CHAR
    (68) type -> . BOOL
    (69) type -> . STRING

    PRIOMH          reduce using rule 4 (auxprogram -> .)
    FUNCTION        shift and go to state 5
    INT             shift and go to state 11
    FLOAT           shift and go to state 13
    CHAR            shift and go to state 7
    BOOL            shift and go to state 14
    STRING          shift and go to state 10

    function                       shift and go to state 9
    vars                           shift and go to state 6
    auxprogram                     shift and go to state 8
    type                           shift and go to state 12

state 5

    (71) function -> FUNCTION . codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope
    (90) codeScope -> .

    VOID            reduce using rule 90 (codeScope -> .)
    INT             reduce using rule 90 (codeScope -> .)
    FLOAT           reduce using rule 90 (codeScope -> .)
    CHAR            reduce using rule 90 (codeScope -> .)
    BOOL            reduce using rule 90 (codeScope -> .)
    STRING          reduce using rule 90 (codeScope -> .)

    codeScope                      shift and go to state 15

state 6

    (2) auxprogram -> vars . auxprogram
    (2) auxprogram -> . vars auxprogram
    (3) auxprogram -> . function auxprogram
    (4) auxprogram -> .
    (74) vars -> . type codeCheckType varsaux
    (71) function -> . FUNCTION codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope
    (65) type -> . INT
    (66) type -> . FLOAT
    (67) type -> . CHAR
    (68) type -> . BOOL
    (69) type -> . STRING

    PRIOMH          reduce using rule 4 (auxprogram -> .)
    FUNCTION        shift and go to state 5
    INT             shift and go to state 11
    FLOAT           shift and go to state 13
    CHAR            shift and go to state 7
    BOOL            shift and go to state 14
    STRING          shift and go to state 10

    function                       shift and go to state 9
    vars                           shift and go to state 6
    auxprogram                     shift and go to state 16
    type                           shift and go to state 12

state 7

    (67) type -> CHAR .

    ID              reduce using rule 67 (type -> CHAR .)


state 8

    (1) program -> PROGRAM ID LFTBRAC auxprogram . main RGTBRAC
    (70) main -> . PRIOMH codeScope block

    PRIOMH          shift and go to state 17

    main                           shift and go to state 18

state 9

    (3) auxprogram -> function . auxprogram
    (2) auxprogram -> . vars auxprogram
    (3) auxprogram -> . function auxprogram
    (4) auxprogram -> .
    (74) vars -> . type codeCheckType varsaux
    (71) function -> . FUNCTION codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope
    (65) type -> . INT
    (66) type -> . FLOAT
    (67) type -> . CHAR
    (68) type -> . BOOL
    (69) type -> . STRING

    PRIOMH          reduce using rule 4 (auxprogram -> .)
    FUNCTION        shift and go to state 5
    INT             shift and go to state 11
    FLOAT           shift and go to state 13
    CHAR            shift and go to state 7
    BOOL            shift and go to state 14
    STRING          shift and go to state 10

    function                       shift and go to state 9
    vars                           shift and go to state 6
    auxprogram                     shift and go to state 19
    type                           shift and go to state 12

state 10

    (69) type -> STRING .

    ID              reduce using rule 69 (type -> STRING .)


state 11

    (65) type -> INT .

    ID              reduce using rule 65 (type -> INT .)


state 12

    (74) vars -> type . codeCheckType varsaux
    (91) codeCheckType -> .

    ID              reduce using rule 91 (codeCheckType -> .)

    codeCheckType                  shift and go to state 20

state 13

    (66) type -> FLOAT .

    ID              reduce using rule 66 (type -> FLOAT .)


state 14

    (68) type -> BOOL .

    ID              reduce using rule 68 (type -> BOOL .)


state 15

    (71) function -> FUNCTION codeScope . functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope
    (72) functionaux -> . VOID codeTypeVoid codeCheckType
    (73) functionaux -> . codeFuncIndicator type codeCheckType
    (97) codeFuncIndicator -> .

    VOID            shift and go to state 23
    INT             reduce using rule 97 (codeFuncIndicator -> .)
    FLOAT           reduce using rule 97 (codeFuncIndicator -> .)
    CHAR            reduce using rule 97 (codeFuncIndicator -> .)
    BOOL            reduce using rule 97 (codeFuncIndicator -> .)
    STRING          reduce using rule 97 (codeFuncIndicator -> .)

    functionaux                    shift and go to state 21
    codeFuncIndicator              shift and go to state 22

state 16

    (2) auxprogram -> vars auxprogram .

    PRIOMH          reduce using rule 2 (auxprogram -> vars auxprogram .)


state 17

    (70) main -> PRIOMH . codeScope block
    (90) codeScope -> .

    LFTBRAC         reduce using rule 90 (codeScope -> .)

    codeScope                      shift and go to state 24

state 18

    (1) program -> PROGRAM ID LFTBRAC auxprogram main . RGTBRAC

    RGTBRAC         shift and go to state 25


state 19

    (3) auxprogram -> function auxprogram .

    PRIOMH          reduce using rule 3 (auxprogram -> function auxprogram .)


state 20

    (74) vars -> type codeCheckType . varsaux
    (75) varsaux -> . ID codeAddVar EQUAL expression SEMICOLON
    (76) varsaux -> . ID codeAddVar EQUAL expression COMMA varsaux
    (77) varsaux -> . ID codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvals SEMICOLON
    (78) varsaux -> . ID codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvals COMMA varsaux

    ID              shift and go to state 26

    varsaux                        shift and go to state 27

state 21

    (71) function -> FUNCTION codeScope functionaux . ID codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope

    ID              shift and go to state 28


state 22

    (73) functionaux -> codeFuncIndicator . type codeCheckType
    (65) type -> . INT
    (66) type -> . FLOAT
    (67) type -> . CHAR
    (68) type -> . BOOL
    (69) type -> . STRING

    INT             shift and go to state 11
    FLOAT           shift and go to state 13
    CHAR            shift and go to state 7
    BOOL            shift and go to state 14
    STRING          shift and go to state 10

    type                           shift and go to state 29

state 23

    (72) functionaux -> VOID . codeTypeVoid codeCheckType
    (96) codeTypeVoid -> .

    ID              reduce using rule 96 (codeTypeVoid -> .)

    codeTypeVoid                   shift and go to state 30

state 24

    (70) main -> PRIOMH codeScope . block
    (17) block -> . LFTBRAC blockneutral RGTBRAC

    LFTBRAC         shift and go to state 31

    block                          shift and go to state 32

state 25

    (1) program -> PROGRAM ID LFTBRAC auxprogram main RGTBRAC .

    $end            reduce using rule 1 (program -> PROGRAM ID LFTBRAC auxprogram main RGTBRAC .)


state 26

    (75) varsaux -> ID . codeAddVar EQUAL expression SEMICOLON
    (76) varsaux -> ID . codeAddVar EQUAL expression COMMA varsaux
    (77) varsaux -> ID . codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvals SEMICOLON
    (78) varsaux -> ID . codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvals COMMA varsaux
    (92) codeAddVar -> .
    (93) codeAddVarArreglo -> .

    EQUAL           reduce using rule 92 (codeAddVar -> .)
    LFTBRACSQR      reduce using rule 93 (codeAddVarArreglo -> .)

    codeAddVarArreglo              shift and go to state 33
    codeAddVar                     shift and go to state 34

state 27

    (74) vars -> type codeCheckType varsaux .

    IF              reduce using rule 74 (vars -> type codeCheckType varsaux .)
    WHILE           reduce using rule 74 (vars -> type codeCheckType varsaux .)
    PRINT           reduce using rule 74 (vars -> type codeCheckType varsaux .)
    READ            reduce using rule 74 (vars -> type codeCheckType varsaux .)
    ID              reduce using rule 74 (vars -> type codeCheckType varsaux .)
    INT             reduce using rule 74 (vars -> type codeCheckType varsaux .)
    FLOAT           reduce using rule 74 (vars -> type codeCheckType varsaux .)
    CHAR            reduce using rule 74 (vars -> type codeCheckType varsaux .)
    BOOL            reduce using rule 74 (vars -> type codeCheckType varsaux .)
    STRING          reduce using rule 74 (vars -> type codeCheckType varsaux .)
    RGTBRAC         reduce using rule 74 (vars -> type codeCheckType varsaux .)
    RETURN          reduce using rule 74 (vars -> type codeCheckType varsaux .)
    FUNCTION        reduce using rule 74 (vars -> type codeCheckType varsaux .)
    PRIOMH          reduce using rule 74 (vars -> type codeCheckType varsaux .)


state 28

    (71) function -> FUNCTION codeScope functionaux ID . codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope
    (95) codeNameOfFunct -> .

    LFTPAREN        reduce using rule 95 (codeNameOfFunct -> .)

    codeNameOfFunct                shift and go to state 35

state 29

    (73) functionaux -> codeFuncIndicator type . codeCheckType
    (91) codeCheckType -> .

    ID              reduce using rule 91 (codeCheckType -> .)

    codeCheckType                  shift and go to state 36

state 30

    (72) functionaux -> VOID codeTypeVoid . codeCheckType
    (91) codeCheckType -> .

    ID              reduce using rule 91 (codeCheckType -> .)

    codeCheckType                  shift and go to state 37

state 31

    (17) block -> LFTBRAC . blockneutral RGTBRAC
    (14) blockneutral -> . statement blockneutral
    (15) blockneutral -> . vars blockneutral
    (16) blockneutral -> . empty
    (59) statement -> . assignment
    (60) statement -> . condition
    (61) statement -> . loop
    (62) statement -> . write
    (63) statement -> . read
    (64) statement -> . call
    (74) vars -> . type codeCheckType varsaux
    (86) empty -> .
    (9) assignment -> . assignmentaux EQUAL expression SEMICOLON
    (18) condition -> . IF conditionaux
    (19) condition -> . IF conditionaux ELSE block
    (51) loop -> . WHILE codeWhileCondition LFTPAREN expression RGTPAREN codeGOTOF block codeGOTO
    (52) write -> . PRINT LFTPAREN constant RGTPAREN SEMICOLON
    (83) read -> . READ LFTPAREN readaux RGTPAREN SEMICOLON
    (79) call -> . ID LFTPAREN exp callaux RGTPAREN SEMICOLON
    (65) type -> . INT
    (66) type -> . FLOAT
    (67) type -> . CHAR
    (68) type -> . BOOL
    (69) type -> . STRING
    (10) assignmentaux -> . ID
    (11) assignmentaux -> . array
    (5) array -> . ID LFTBRACSQR exp RGTBRACSQR

    RGTBRAC         reduce using rule 86 (empty -> .)
    IF              shift and go to state 52
    WHILE           shift and go to state 40
    PRINT           shift and go to state 41
    READ            shift and go to state 39
    ID              shift and go to state 50
    INT             shift and go to state 11
    FLOAT           shift and go to state 13
    CHAR            shift and go to state 7
    BOOL            shift and go to state 14
    STRING          shift and go to state 10

    vars                           shift and go to state 38
    array                          shift and go to state 42
    write                          shift and go to state 43
    call                           shift and go to state 45
    statement                      shift and go to state 46
    type                           shift and go to state 12
    empty                          shift and go to state 47
    read                           shift and go to state 44
    assignment                     shift and go to state 48
    assignmentaux                  shift and go to state 49
    condition                      shift and go to state 51
    blockneutral                   shift and go to state 53
    loop                           shift and go to state 54

state 32

    (70) main -> PRIOMH codeScope block .

    RGTBRAC         reduce using rule 70 (main -> PRIOMH codeScope block .)


state 33

    (77) varsaux -> ID codeAddVarArreglo . LFTBRACSQR INT RGTBRACSQR EQUAL arrayvals SEMICOLON
    (78) varsaux -> ID codeAddVarArreglo . LFTBRACSQR INT RGTBRACSQR EQUAL arrayvals COMMA varsaux

    LFTBRACSQR      shift and go to state 55


state 34

    (75) varsaux -> ID codeAddVar . EQUAL expression SEMICOLON
    (76) varsaux -> ID codeAddVar . EQUAL expression COMMA varsaux

    EQUAL           shift and go to state 56


state 35

    (71) function -> FUNCTION codeScope functionaux ID codeNameOfFunct . LFTPAREN parameter RGTPAREN blockreturn codeScope

    LFTPAREN        shift and go to state 57


state 36

    (73) functionaux -> codeFuncIndicator type codeCheckType .

    ID              reduce using rule 73 (functionaux -> codeFuncIndicator type codeCheckType .)


state 37

    (72) functionaux -> VOID codeTypeVoid codeCheckType .

    ID              reduce using rule 72 (functionaux -> VOID codeTypeVoid codeCheckType .)


state 38

    (15) blockneutral -> vars . blockneutral
    (14) blockneutral -> . statement blockneutral
    (15) blockneutral -> . vars blockneutral
    (16) blockneutral -> . empty
    (59) statement -> . assignment
    (60) statement -> . condition
    (61) statement -> . loop
    (62) statement -> . write
    (63) statement -> . read
    (64) statement -> . call
    (74) vars -> . type codeCheckType varsaux
    (86) empty -> .
    (9) assignment -> . assignmentaux EQUAL expression SEMICOLON
    (18) condition -> . IF conditionaux
    (19) condition -> . IF conditionaux ELSE block
    (51) loop -> . WHILE codeWhileCondition LFTPAREN expression RGTPAREN codeGOTOF block codeGOTO
    (52) write -> . PRINT LFTPAREN constant RGTPAREN SEMICOLON
    (83) read -> . READ LFTPAREN readaux RGTPAREN SEMICOLON
    (79) call -> . ID LFTPAREN exp callaux RGTPAREN SEMICOLON
    (65) type -> . INT
    (66) type -> . FLOAT
    (67) type -> . CHAR
    (68) type -> . BOOL
    (69) type -> . STRING
    (10) assignmentaux -> . ID
    (11) assignmentaux -> . array
    (5) array -> . ID LFTBRACSQR exp RGTBRACSQR

    RGTBRAC         reduce using rule 86 (empty -> .)
    RETURN          reduce using rule 86 (empty -> .)
    IF              shift and go to state 52
    WHILE           shift and go to state 40
    PRINT           shift and go to state 41
    READ            shift and go to state 39
    ID              shift and go to state 50
    INT             shift and go to state 11
    FLOAT           shift and go to state 13
    CHAR            shift and go to state 7
    BOOL            shift and go to state 14
    STRING          shift and go to state 10

    vars                           shift and go to state 38
    array                          shift and go to state 42
    write                          shift and go to state 43
    call                           shift and go to state 45
    statement                      shift and go to state 46
    type                           shift and go to state 12
    empty                          shift and go to state 47
    read                           shift and go to state 44
    assignment                     shift and go to state 48
    assignmentaux                  shift and go to state 49
    condition                      shift and go to state 51
    blockneutral                   shift and go to state 58
    loop                           shift and go to state 54

state 39

    (83) read -> READ . LFTPAREN readaux RGTPAREN SEMICOLON

    LFTPAREN        shift and go to state 59


state 40

    (51) loop -> WHILE . codeWhileCondition LFTPAREN expression RGTPAREN codeGOTOF block codeGOTO
    (89) codeWhileCondition -> .

    LFTPAREN        reduce using rule 89 (codeWhileCondition -> .)

    codeWhileCondition             shift and go to state 60

state 41

    (52) write -> PRINT . LFTPAREN constant RGTPAREN SEMICOLON

    LFTPAREN        shift and go to state 61


state 42

    (11) assignmentaux -> array .

    EQUAL           reduce using rule 11 (assignmentaux -> array .)


state 43

    (62) statement -> write .

    IF              reduce using rule 62 (statement -> write .)
    WHILE           reduce using rule 62 (statement -> write .)
    PRINT           reduce using rule 62 (statement -> write .)
    READ            reduce using rule 62 (statement -> write .)
    ID              reduce using rule 62 (statement -> write .)
    INT             reduce using rule 62 (statement -> write .)
    FLOAT           reduce using rule 62 (statement -> write .)
    CHAR            reduce using rule 62 (statement -> write .)
    BOOL            reduce using rule 62 (statement -> write .)
    STRING          reduce using rule 62 (statement -> write .)
    RGTBRAC         reduce using rule 62 (statement -> write .)
    RETURN          reduce using rule 62 (statement -> write .)


state 44

    (63) statement -> read .

    IF              reduce using rule 63 (statement -> read .)
    WHILE           reduce using rule 63 (statement -> read .)
    PRINT           reduce using rule 63 (statement -> read .)
    READ            reduce using rule 63 (statement -> read .)
    ID              reduce using rule 63 (statement -> read .)
    INT             reduce using rule 63 (statement -> read .)
    FLOAT           reduce using rule 63 (statement -> read .)
    CHAR            reduce using rule 63 (statement -> read .)
    BOOL            reduce using rule 63 (statement -> read .)
    STRING          reduce using rule 63 (statement -> read .)
    RGTBRAC         reduce using rule 63 (statement -> read .)
    RETURN          reduce using rule 63 (statement -> read .)


state 45

    (64) statement -> call .

    IF              reduce using rule 64 (statement -> call .)
    WHILE           reduce using rule 64 (statement -> call .)
    PRINT           reduce using rule 64 (statement -> call .)
    READ            reduce using rule 64 (statement -> call .)
    ID              reduce using rule 64 (statement -> call .)
    INT             reduce using rule 64 (statement -> call .)
    FLOAT           reduce using rule 64 (statement -> call .)
    CHAR            reduce using rule 64 (statement -> call .)
    BOOL            reduce using rule 64 (statement -> call .)
    STRING          reduce using rule 64 (statement -> call .)
    RGTBRAC         reduce using rule 64 (statement -> call .)
    RETURN          reduce using rule 64 (statement -> call .)


state 46

    (14) blockneutral -> statement . blockneutral
    (14) blockneutral -> . statement blockneutral
    (15) blockneutral -> . vars blockneutral
    (16) blockneutral -> . empty
    (59) statement -> . assignment
    (60) statement -> . condition
    (61) statement -> . loop
    (62) statement -> . write
    (63) statement -> . read
    (64) statement -> . call
    (74) vars -> . type codeCheckType varsaux
    (86) empty -> .
    (9) assignment -> . assignmentaux EQUAL expression SEMICOLON
    (18) condition -> . IF conditionaux
    (19) condition -> . IF conditionaux ELSE block
    (51) loop -> . WHILE codeWhileCondition LFTPAREN expression RGTPAREN codeGOTOF block codeGOTO
    (52) write -> . PRINT LFTPAREN constant RGTPAREN SEMICOLON
    (83) read -> . READ LFTPAREN readaux RGTPAREN SEMICOLON
    (79) call -> . ID LFTPAREN exp callaux RGTPAREN SEMICOLON
    (65) type -> . INT
    (66) type -> . FLOAT
    (67) type -> . CHAR
    (68) type -> . BOOL
    (69) type -> . STRING
    (10) assignmentaux -> . ID
    (11) assignmentaux -> . array
    (5) array -> . ID LFTBRACSQR exp RGTBRACSQR

    RGTBRAC         reduce using rule 86 (empty -> .)
    RETURN          reduce using rule 86 (empty -> .)
    IF              shift and go to state 52
    WHILE           shift and go to state 40
    PRINT           shift and go to state 41
    READ            shift and go to state 39
    ID              shift and go to state 50
    INT             shift and go to state 11
    FLOAT           shift and go to state 13
    CHAR            shift and go to state 7
    BOOL            shift and go to state 14
    STRING          shift and go to state 10

    vars                           shift and go to state 38
    array                          shift and go to state 42
    write                          shift and go to state 43
    call                           shift and go to state 45
    statement                      shift and go to state 46
    type                           shift and go to state 12
    empty                          shift and go to state 47
    read                           shift and go to state 44
    assignment                     shift and go to state 48
    assignmentaux                  shift and go to state 49
    condition                      shift and go to state 51
    blockneutral                   shift and go to state 62
    loop                           shift and go to state 54

state 47

    (16) blockneutral -> empty .

    RGTBRAC         reduce using rule 16 (blockneutral -> empty .)
    RETURN          reduce using rule 16 (blockneutral -> empty .)


state 48

    (59) statement -> assignment .

    IF              reduce using rule 59 (statement -> assignment .)
    WHILE           reduce using rule 59 (statement -> assignment .)
    PRINT           reduce using rule 59 (statement -> assignment .)
    READ            reduce using rule 59 (statement -> assignment .)
    ID              reduce using rule 59 (statement -> assignment .)
    INT             reduce using rule 59 (statement -> assignment .)
    FLOAT           reduce using rule 59 (statement -> assignment .)
    CHAR            reduce using rule 59 (statement -> assignment .)
    BOOL            reduce using rule 59 (statement -> assignment .)
    STRING          reduce using rule 59 (statement -> assignment .)
    RGTBRAC         reduce using rule 59 (statement -> assignment .)
    RETURN          reduce using rule 59 (statement -> assignment .)


state 49

    (9) assignment -> assignmentaux . EQUAL expression SEMICOLON

    EQUAL           shift and go to state 63


state 50

    (79) call -> ID . LFTPAREN exp callaux RGTPAREN SEMICOLON
    (10) assignmentaux -> ID .
    (5) array -> ID . LFTBRACSQR exp RGTBRACSQR

    LFTPAREN        shift and go to state 64
    EQUAL           reduce using rule 10 (assignmentaux -> ID .)
    LFTBRACSQR      shift and go to state 65


state 51

    (60) statement -> condition .

    IF              reduce using rule 60 (statement -> condition .)
    WHILE           reduce using rule 60 (statement -> condition .)
    PRINT           reduce using rule 60 (statement -> condition .)
    READ            reduce using rule 60 (statement -> condition .)
    ID              reduce using rule 60 (statement -> condition .)
    INT             reduce using rule 60 (statement -> condition .)
    FLOAT           reduce using rule 60 (statement -> condition .)
    CHAR            reduce using rule 60 (statement -> condition .)
    BOOL            reduce using rule 60 (statement -> condition .)
    STRING          reduce using rule 60 (statement -> condition .)
    RGTBRAC         reduce using rule 60 (statement -> condition .)
    RETURN          reduce using rule 60 (statement -> condition .)


state 52

    (18) condition -> IF . conditionaux
    (19) condition -> IF . conditionaux ELSE block
    (20) conditionaux -> . LFTPAREN expression RGTPAREN block conditionaux2

    LFTPAREN        shift and go to state 66

    conditionaux                   shift and go to state 67

state 53

    (17) block -> LFTBRAC blockneutral . RGTBRAC

    RGTBRAC         shift and go to state 68


state 54

    (61) statement -> loop .

    IF              reduce using rule 61 (statement -> loop .)
    WHILE           reduce using rule 61 (statement -> loop .)
    PRINT           reduce using rule 61 (statement -> loop .)
    READ            reduce using rule 61 (statement -> loop .)
    ID              reduce using rule 61 (statement -> loop .)
    INT             reduce using rule 61 (statement -> loop .)
    FLOAT           reduce using rule 61 (statement -> loop .)
    CHAR            reduce using rule 61 (statement -> loop .)
    BOOL            reduce using rule 61 (statement -> loop .)
    STRING          reduce using rule 61 (statement -> loop .)
    RGTBRAC         reduce using rule 61 (statement -> loop .)
    RETURN          reduce using rule 61 (statement -> loop .)


state 55

    (77) varsaux -> ID codeAddVarArreglo LFTBRACSQR . INT RGTBRACSQR EQUAL arrayvals SEMICOLON
    (78) varsaux -> ID codeAddVarArreglo LFTBRACSQR . INT RGTBRACSQR EQUAL arrayvals COMMA varsaux

    INT             shift and go to state 69


state 56

    (75) varsaux -> ID codeAddVar EQUAL . expression SEMICOLON
    (76) varsaux -> ID codeAddVar EQUAL . expression COMMA varsaux
    (41) expression -> . exp
    (42) expression -> . exp expressionaux codeAddOperator exp codeAskExpression
    (33) exp -> . term
    (34) exp -> . term PLUS codeAddOperator exp
    (35) exp -> . term MINUS codeAddOperator exp
    (56) term -> . factor MULTIPLICATION codeAddOperator term
    (57) term -> . factor DIVISION codeAddOperator term
    (58) term -> . factor codeAskTerm
    (39) factor -> . LFTPAREN codeAddOpenParen expression RGTPAREN codeDeleteOpenParen codeAskFactor
    (40) factor -> . factoraux codeAskFactor
    (36) factoraux -> . constant
    (37) factoraux -> . PLUS constant
    (38) factoraux -> . MINUS constant
    (23) constant -> . ID
    (24) constant -> . array
    (25) constant -> . cteN
    (26) constant -> . cteS
    (27) constant -> . TRUE
    (28) constant -> . FALSE
    (29) constant -> . call2
    (5) array -> . ID LFTBRACSQR exp RGTBRACSQR
    (30) cteN -> . FLOAT codeAddConst
    (31) cteN -> . INT codeAddConst
    (32) cteS -> . STRING
    (82) call2 -> . ID LFTPAREN exp callaux RGTPAREN

    LFTPAREN        shift and go to state 81
    PLUS            shift and go to state 78
    MINUS           shift and go to state 74
    ID              shift and go to state 82
    TRUE            shift and go to state 76
    FALSE           shift and go to state 84
    FLOAT           shift and go to state 86
    INT             shift and go to state 85
    STRING          shift and go to state 79
